<resources><!--
   /* *****************************************************************************
    **    Author: René de Groot
    ** Copyright: (c) 2017 René de Groot All Rights Reserved.
    ** ****************************************************************************
    ** No part of this file may be reproduced
    ** or transmitted in any form or by any
    ** means, electronic or mechanical, for the
    ** purpose, without the express written
    ** permission of the copyright holder.
    * *****************************************************************************
    *
    *   This file is part of "Stay-awake on adb".
    *
    *   "Stay-awake on adb" is free software: you can redistribute it and/or modify
    *   it under the terms of the GNU General Public License as published by
    *   the Free Software Foundation, either version 3 of the License, or
    *   (at your option) any later version.
    *
    *   "Stay-awake on adb" is distributed in the hope that it will be useful,
    *   but WITHOUT ANY WARRANTY; without even the implied warranty of
    *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *   GNU General Public License for more details.
    *
    *   You should have received a copy of the GNU General Public License
    *   along with "Stay-awake on adb".  If not, see <http://www.gnu.org/licenses/>.
    *
    */
-->
    <string name="app_name">Stay-awake on adb</string>
    <string name="grant_permission">Grant permission to read notifications</string>
    <string name="text_service_explained">Acquire/release wakelock on appear/disappear of ADB notification</string>
    <string name="text_lock_explained">Current wake lock state</string>
    <string name="button_released">Released</string>
    <string name="button_acquired">Acquired</string>
    <string name="button_enabled">Enabled</string>
    <string name="button_disabled">Disabled</string>
    <string name="service_name">ADB notification listener</string>
    <string name="about_version">Version %1$s (%2$s, build %3$d)</string>
    <string name="action_about">About</string>
</resources>
